--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       }
 
       hr{
-        background-color: white;
         border-style: none;
-        height: 2px;
-      }
+        border-top-style: dotted;
+        border-color: gray;
+        border-width: 5px;
+        width: 5%;
 
     </style>
 
