--- a/Contact-me.html
+++ b/Contact-me.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
+    <link rel="stylesheet" href="/css/master.css">
 </head>
 <body>
     <h1>My Contact Information</h1>
     <p>Fictional Address</p>
     <p>12893U124213</p>
-    <p>Email@gmail.com</p>       
+    <p>Email@gmail.com</p>
 </body>
 </html>
