--- a/index.html
+++ b/index.html
@@ -3,21 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My personal site</title>
-
-    <style>
-
-      body {
-        background-color: #EAF6F6 ;
-      }
-
-      hr{
-        border-style: none;
-        border-top-style: dotted;
-        border-color: gray;
-        border-width: 5px;
-        width: 5%;
-      }
-    </style>
+        <link rel="stylesheet" href="css/styles.css">
 
     </head>
 
@@ -30,7 +16,7 @@
         <p>I am a Security Guard. I am trying to learn how to code to have a better income and work in something that I actually like.</p></td>
         </tr>
         </table>
-        <hr size="3" noshade="">
+        <hr>
         <h3>Goals</h3>
             <ul>
                 <li>Get a job or a freelance contract</li>
@@ -44,7 +30,7 @@
                 <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">VideoGames</a></li>
                 <li>Anime</li>
             </ol>
-        <hr size="3" noshade="">
+        <hr>
         <h3>Work Experience</h3>
         <Table>
             <thead>
