--- a/Contact-me.html
+++ b/Contact-me.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
-    <link rel="stylesheet" href="/css/master.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body>
     <h1>My Contact Information</h1>
     <p>Fictional Address</p>
     <p>12893U124213</p>
     <p>Email@gmail.com</p>
+    <hr>
+    <form action="mailto:Archg@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name</label>
+    <input type="text" name="Your Name" value=""><br>
+    <label>your Email</label>
+    <input type="email" name="Your Email" value=""><br>
+    <label>Your Message</label>
+    <textarea name="YourMessage" rows="10" cols="30"></textarea><hr>
+    <input type="submit" name="">
+    </form>
 </body>
 </html>
